# SATIS-Attribution

./: .env  .gitignore  README.md  pyproject.toml  render.yaml  run.py  satis_attribution.db
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  assignments.py  feedback.py  students.py  widgets.py
app/core/: security.py
app/db/: database.py
app/models/: __init__.py  assignment.py  feedback.py  student.py  widget.py
app/schemas/: __init__.py  assignment.py  feedback.py  response.py  student.py  widget.py
app/services/: assignment_service.py  flutter_catalog.py  widget_loader.py
data/: flutter_widgets.json  flutter_widgets_catalog.json
scripts/: import_widget_catalog.py  import_widgets.py  migrate_sqlite_to_postgres.py  scrape_flutter_widgets.py
tests/: conftest.py  test_assignments.py  test_feedback.py  test_flutter_catalog.py  test_students.py
