[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satis-attribution-backend"
version = "0.1.0"
description = "Backend MVP FastAPI pour l'attribution de widgets SATIS."
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.poetry]
package-mode = false
